# fullstack-test

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: backend.yml  frontend.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  models.rs  openai.rs
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.toml
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/components/: Header.tsx  Layout.tsx  ProtectedRoute.tsx  Spinner.tsx  TestBanner.tsx  TextOperation.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useApi.ts  useAuth.ts  useTheme.ts
frontend/src/pages/: EditorPage.test.tsx  EditorPage.tsx  LoginPage.test.tsx  LoginPage.tsx
